# topic_sys_monitor_ws

./: README.md
install/: local_setup.sh  setup.sh
install/status_display/share/ament_index/resource_index/parent_prefix_path/: status_display
install/status_display/share/status_display/: package.sh  package.xml
install/status_interfaces/include/status_interfaces/status_interfaces/msg/detail/: system_status__description.c  system_status__struct.h
install/status_interfaces/share/status_interfaces/: package.dsv  package.sh
install/status_publisher/lib/status_publisher/: sys_status_publisher
install/status_publisher/share/ament_index/resource_index/parent_prefix_path/: status_publisher
install/status_publisher/share/status_publisher/: local_setup.sh  package.dsv  package.sh  package.xml
install/status_publisher/share/status_publisher/cmake/: status_publisherConfig.cmake
log/: latest_build
src/status_display/: CMakeLists.txt
src/status_display/include/status_display/: sys_status_display.h
src/status_display/src/: sys_status_display.cpp
src/status_interfaces/: CMakeLists.txt
src/status_interfaces/msg/: SystemStatus.msg
src/status_publisher/: CMakeLists.txt
src/status_publisher/src/: sys_status_publisher.cpp
